<resources>
    <string name="app_name">Cool Weather</string>
    <string name="weather_information">- Weather Information -</string>
    <string name="sea_level_pressure">Sea Level Pressure</string>
    <string name="altitude">Altitude</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="raios">Raios</string>
    <string name="vento">Vento</string>
    <string name="humidade">Humidade</string>
</resources>