<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weatherViewModel"
            type="dam.a47500.coolweather.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@{weatherViewModel.wallpaper}"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="46dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="167dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/app_name"
            app:imageDrawable="@{weatherViewModel.icon}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationLabel" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="15dp"
            android:text="Update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/latitudeInput"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="38dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toEndOf="@+id/latitudeLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:text="@string/latitude"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/longitude"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitudeLabel" />

        <EditText
            android:id="@+id/longitudeInput"
            android:layout_width="100dp"
            android:layout_height="31dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toEndOf="@+id/longitudeLabel"
            app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="294dp"
            android:layout_height="24dp"
            android:layout_marginTop="30dp"
            android:text="@={weatherViewModel.location}"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longitudeInput" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="166dp"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:text="@={weatherViewModel.description}"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationLabel" />

        <TextView
            android:id="@+id/slpText"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="36dp"
            android:text="@={weatherViewModel.slp}"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/windDirectionLabel"
            android:layout_width="136dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/wind_direction"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seaLevelPressureLabel" />

        <TextView
            android:id="@+id/wdText"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:text="@={weatherViewModel.wind_direction}"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slpText" />

        <TextView
            android:id="@+id/wsText"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:text="@={weatherViewModel.wind_speed}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wdText" />

        <TextView
            android:id="@+id/windSpeedLabel"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/wind_speed"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/windDirectionLabel" />

        <TextView
            android:id="@+id/texttimeLabelView5"
            android:layout_width="71dp"
            android:layout_height="38dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/windSpeedLabel" />

        <TextView
            android:id="@+id/temperatureText"
            android:layout_width="109dp"
            android:layout_height="44dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="44dp"
            android:text="@={weatherViewModel.temperature}"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:text="@={weatherViewModel.time_zone}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wsText" />

        <TextView
            android:id="@+id/seaLevelPressureLabel"
            android:layout_width="161dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:text="@string/sea_level_pressure"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>